--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -12,5 +12,7 @@
 /* Blocks */
 @import './blocks/header.scss';
 @import './blocks/welcome';
+@import './blocks/about';
+@import './blocks/menu';
 /* No styles code below. Only in modules */
 /* Не пишите CSS код ниже. Только в подключаемых файлах */
