--- a/app/scss/base/_base.scss
+++ b/app/scss/base/_base.scss
@@ -1,5 +1,3 @@
-@import url(https://fonts.googleapis.com/css?family=Manrope:200,300,regular,500,600,700,800);
-
 html {
 	scroll-behavior: smooth;
 	background-color: var(--color-background);
@@ -9,9 +7,8 @@ html {
 
 body {
 	width: 100vw;
-	height: 200vh;
 	background-color: var(--color-background-secondary);
-	font-family: var(--font-primary);
+	font-family: var(--font-montserrat);
 	color: var(--color-text);
 	font-weight: 400;
 	text-wrap: balance;
