--- a/app/scss/base/_vars.scss
+++ b/app/scss/base/_vars.scss
@@ -6,7 +6,7 @@
 	--container-height: 100vh;
 	--header-height: 100px;
 	// fonts var
-	--font-primary: "Montserrat", sans-serif;;
+	--font-primary: "Montserrat", serif;
 	// colors var
 	--color-background: #fff; 		
 	--color-background-secondary: #FAFBFE; 
