--- a/app/scss/blocks/_welcome.scss
+++ b/app/scss/blocks/_welcome.scss
@@ -5,6 +5,7 @@ $header-padding: 80px;
     height: 100vh;
     user-select: none;
     &__container{
+        max-width: 100%;
         display: flex;
         align-items: center;
         justify-content: center;
