--- a/app/scss/blocks/_welcome.scss
+++ b/app/scss/blocks/_welcome.scss
@@ -1,120 +1,58 @@
-$header-padding: 80px;
-
 .welcome{
-    padding-top: $header-padding;
+    padding-top: 200px;
     height: 100vh;
     user-select: none;
+    overflow: hidden;
     &__container{
-        max-width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
         height: 100%;
-        overflow: hidden;
+    }
+    &__title{
+        position: relative;
+        z-index: 99999;
+        font-size: 82px;
+        text-transform: uppercase;
+        color: #fff;
+    }
+    &__description{
+        position: relative;
+        z-index: 99999;
+        width: 50%;
+        font-size: 24px;
+        color: $color-text;
+        margin-bottom: 40px;
+    }
+    &__button{
+        position: relative;
+        z-index: 99999;
+        padding: 0;
+        font-size: 32px;
+        text-transform: uppercase;
+        display: flex;
+        gap: 30px;
+        color:  $color-text;
         &-text{
-            position: absolute;
-            top: 50px;
-            right: 0;
-            z-index: 2;
+            font-weight: 500;
         }
-        &-circle{
-            &1{
-                position: absolute;
-                right: -50px;
-                z-index: 1;
-            }
-            &2{
-                position: absolute;
-                bottom: -100px;
-                left: 100px;
-                z-index: 2;
-            }
+        &-icon{
+            width: 36px;
+            stroke-width: 1.5;
         }
-        &-sushi{
-            &1{
-                position: absolute;
-                bottom: 300px;
-                right: -50px;
-                z-index: 4;
-            }
-            &2{
-                position: absolute;
-                bottom: 0;
-                left: 0;
-                z-index: 5;
-            }
-        }
-        &-tobiko{
-            position: absolute;
-            right: -60px;
-            z-index: 3;
-        }
-    }
-    &__circle{
-        z-index: 1;
-        position: relative;
-        width: 600px;
-        height: 600px;
-        background-color: #222;
-        border-radius: 50%;
-        @include small-tablet{
-            scale: 0.7;
-        }
-        @include small-mobile{
-            width: 500px;
-            height: 500px;
-            scale: 0.8;
-        }
-        &1{
-            position: relative;
-            filter: drop-shadow(20px 10px 2px black);
-        }
-        &2{
-            position: relative;
-            filter: drop-shadow(20px 10px 2px black);
-        }
-    }
-    &__sushi{
-        &1{
-            position: relative;
-            filter: drop-shadow(20px 10px 10px black);
-            
-        }
-        &2{
-            position: relative;
-            filter: drop-shadow(20px 10px 10px black);
-            
-        }
-    }
-    &__tobiko{
-        position: relative;
-        filter: drop-shadow(20px 10px 10px black);
-    }
-    &__text{
-        position: relative;
     }
     &__background{
-        width: 100%;
+        width: 100vw;
         height: 100vh;
         position: absolute;
         left: 0;
         top: 0;
-        z-index: 0;
-        filter: brightness(0.3);
-        object-fit: cover;
-        z-index: 0;
     }
-    &__description{
-        position: relative;
-        color: #ccc;
-        width: 300px;
-        left: 150px;
-        top: 150px;
-        font-weight: 300;
-        &-text{
-            position: relative;
-            font-size: 24px;
-            text-align: center;
+    &__image{
+        &-background{
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
     }
 }
