--- a/app/scss/blocks/_welcome.scss
+++ b/app/scss/blocks/_welcome.scss
@@ -53,6 +53,7 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
+            transition: all 30ms ease-in-out;
         }
     }
 }
