--- a/app/scss/blocks/_about.scss
+++ b/app/scss/blocks/_about.scss
@@ -2,7 +2,10 @@ $background-color: #090909;
 $color-desc: #ccc;
 
 .about{
+    padding: 100px 0;
+    position: relative;
     background-color: $background-color;
+    z-index: 9999;
     &__title{
         color: $color-desc;
         margin-bottom: 40px;
