--- a/app/scss/base/_base.scss
+++ b/app/scss/base/_base.scss
@@ -4,6 +4,11 @@ html {
 	overflow-x: hidden;
 	width: 100vw;
 }
+html, body {
+	@include small-tablet{
+		overflow-x: hidden!important;
+	}
+}
 
 body {
 	width: 100vw;
