--- a/app/scss/blocks/_welcome.scss
+++ b/app/scss/blocks/_welcome.scss
@@ -2,7 +2,7 @@
     padding-top: 200px;
     height: 100vh;
     user-select: none;
-    overflow: hidden;
+    overflow-x: hidden;
     &__container{
         height: 100%;
     }
