--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -14,5 +14,6 @@
 @import './blocks/welcome';
 @import './blocks/about';
 @import './blocks/menu';
+@import './blocks/reviews';
 /* No styles code below. Only in modules */
 /* Не пишите CSS код ниже. Только в подключаемых файлах */
