--- a/app/scss/blocks/_about.scss
+++ b/app/scss/blocks/_about.scss
@@ -6,6 +6,7 @@ $color-desc: #ccc;
     position: relative;
     background-color: $background-color;
     z-index: 10;
+    box-shadow: -5px 5px 20px 3px #333333;
     &__title{
         color: $color-desc;
         margin-bottom: 40px;
