--- a/app/scss/blocks/_reviews.scss
+++ b/app/scss/blocks/_reviews.scss
@@ -2,6 +2,18 @@
     padding: 100px 0;
     background-color: #111;
     position: relative;
+    &__container{
+        &-slide{
+            background-color: #2c2c2c;
+            padding: 40px;
+            border-radius: 12px;
+            @include reviews{
+                align-items: center;
+                display: flex!important;
+                flex-direction: column;
+            }
+        }
+    }
     &__title{
         z-index: 10;
         position: relative;
@@ -13,11 +25,23 @@
             font-size: 36px;
             font-weight: 400;
             margin-bottom: 10px;
+            @include small-mobile{
+                font-size: 28px;
+            }
+            @include mb{
+                text-align: center;
+            }
         }
         &-desc{
             font-size: 18px;
             line-height: 22px;
             margin-bottom: 15px;
+            @include reviews{
+                text-align: center;
+            }
+            @include small-mobile{
+                font-size: 16px;
+            }
         }
     }
     &__button{
@@ -32,17 +56,23 @@
     }
     &__slide{
         padding: 50px;
-        background-color: #2c2c2c;
         color: #ccc;
-        border-radius: 20px;
-        width: calc(100% - 100px)!important;
-        margin-inline: 50px;
+       
         height: 400px;
+        @include mb{
+            padding: 20px;
+        }
         &-header{
             display: flex;
             align-items: center;
             gap: 20px;
             margin-bottom: 20px;
+            @include reviews{
+                gap: 10px;
+                flex-direction: column;
+                order: 1;
+                margin-bottom: 10px;
+            }
         }
     }
     &__userImage{
@@ -50,18 +80,37 @@
     }
     &__username{
         font-size: 36px;
+        @include small-mobile{
+            font-size: 28px;
+        }
     }
     &__rating{
         margin-bottom: 10px;
+        @include reviews{
+            order: 2;
+            margin-bottom: 20px;
+        }
     }
     &__review{
         font-size: 18px;
         line-height: 22px;
         margin-bottom: 25px;
+        @include reviews{
+            order: 3;
+            text-align: center;
+        }
+        @include small-mobile{
+            font-size: 16px;
+        }
     }
     &__userPhoto{
         border-radius: 15px;
         filter: drop-shadow(2px 4px 6px black);
+        &-container{
+            @include reviews{
+                order: 4;
+            }
+        }
     }
 }
 .swiper{
