--- a/app/scss/base/_vars.scss
+++ b/app/scss/base/_vars.scss
@@ -16,7 +16,7 @@
 	$color-border-secondary: #b3b3b3;
 	$color-ghost: #eef2f7; 				
 	$color-ghost-secondary: #cbd7e7; 	
-	$color-primary: #30369F; 				
+	$color-primary: #E03646; 				
 	$color-primary-secondary: #FA8722;
 	$color-card: #fff; 					
 	$color-card-secondary: #ccc; 			
