--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -15,5 +15,6 @@
 @import './blocks/about';
 @import './blocks/menu';
 @import './blocks/reviews';
+@import './blocks/reservation';
 /* No styles code below. Only in modules */
 /* Не пишите CSS код ниже. Только в подключаемых файлах */
