--- a/app/scss/blocks/_menu.scss
+++ b/app/scss/blocks/_menu.scss
@@ -45,6 +45,9 @@ $radius: 8px;
         position: relative;
         background-color: #2c2c2c;
         transition:  $transition-3s;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
         &:hover{
             transform: translateY(-20px);
             .menu__item-image{
