--- a/app/scss/blocks/_reservation.scss
+++ b/app/scss/blocks/_reservation.scss
@@ -1,3 +1,67 @@
 .reservation{
     padding: 100px 0;
+    z-index: 10;
+    position: relative;
+    background-color: $color-primary;
+    &__title{
+        color: #fff;
+        margin-bottom: 30px;
+    }
+    &__form{
+        background-color: #111;
+        max-width: 500px;
+        margin-inline: auto;
+        padding: 50px;
+        border-radius: $rounded-lg;
+        display: flex;
+        flex-direction: column;
+        gap: 25px;
+        @include mb{
+            padding: 20px;
+        }
+    }
+    &__input{
+        padding: 15px 20px;
+        background-color: #2c2c2c;
+        border-radius: $rounded-md;
+        color: #ccc;
+        width: 100%;
+    }
+    &__textarea{
+        padding: 15px 20px;
+        resize: none;
+        width: 100%!important;
+        color: #ccc;
+        border-radius: $rounded-md;
+        background-color: #2c2c2c;
+        &:focus-visible{
+            outline: none;
+        }
+        &::-webkit-scrollbar{
+            width: 5px;
+            background-color: #2c2c2c;
+        }
+        &::-webkit-scrollbar-thumb{
+            background-color: $color-primary;
+        }
+    }
+    &__button{
+        width: 100%;
+        background-color: $color-primary;
+        color: #fff;
+        &:hover{
+            filter: grayscale(1)
+        }
+    }
+}
+.iti{
+    width: 100%;
+}
+.iti__dropdown-content{
+    background-color: #1a1a1a!important;
+    color: #ccc;
+    z-index: 11;
+}
+.iti__search-input{
+    padding: 10px;
 }
