--- a/app/scss/base/_base.scss
+++ b/app/scss/base/_base.scss
@@ -1,9 +1,12 @@
+:root{
+	--nextui-content1: #2c2c2c;
+}
+
 html {
 	scroll-behavior: smooth;
-	background-color: $color-background;
 	overflow-x: hidden;
 	width: 100vw;
-	background-color: #000;
+	background-color: #000!important;
 }
 html, body {
 	@include small-tablet{
@@ -64,4 +67,11 @@ p{
 }
 input[type='date'] {
 	-webkit-appearance: none;
+}
+::-webkit-scrollbar{
+	width: 10px;
+	background-color: transparent;
+}
+::-webkit-scrollbar-thumb{
+	background-color: $color-primary;
 }
