--- a/app/scss/base/_base.scss
+++ b/app/scss/base/_base.scss
@@ -55,7 +55,7 @@ h1{
 	font-weight: 600;
 }
 h2{
-	font-size: 48px;
+	font-size: 48px!important;
 	font-weight: 600;
 	text-align: center;
 	@include mb{
