--- a/app/scss/blocks/_reservation.scss
+++ b/app/scss/blocks/_reservation.scss
@@ -65,3 +65,12 @@
 .iti__search-input{
     padding: 10px;
 }
+.modal-color{
+    color: #ccc;
+}
+.modal-background{
+    background-color: #2c2c2c!important;
+}
+.button-background{
+    background-color: $color-primary!important;
+}
