--- a/app/scss/blocks/_reservation.scss
+++ b/app/scss/blocks/_reservation.scss
@@ -74,3 +74,6 @@
 .button-background{
     background-color: $color-primary!important;
 }
+.group [data-focus="true"] .group-data-\[focus\=true\]\:border-default-foreground{
+    border-color: #ccc!important;
+}
