--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -16,5 +16,7 @@
 @import './blocks/menu';
 @import './blocks/reviews';
 @import './blocks/reservation';
+@import './blocks/galery';
+@import './blocks/footer';
 /* No styles code below. Only in modules */
 /* Не пишите CSS код ниже. Только в подключаемых файлах */
