--- a/app/scss/blocks/_reviews.scss
+++ b/app/scss/blocks/_reviews.scss
@@ -4,7 +4,7 @@
     position: relative;
     &__container{
         &-slide{
-            background-color: #2c2c2c;
+            background-color: #111;
             padding: 40px;
             border-radius: 12px;
             @include reviews{
