--- a/app/scss/blocks/_welcome.scss
+++ b/app/scss/blocks/_welcome.scss
@@ -3,24 +3,27 @@
     height: 100vh;
     user-select: none;
     overflow-x: hidden;
+    background-color: #111;
     @include mobile{
         padding-top: 0;
     }
     &__container{
         height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
         @include mobile{
-            display: flex;
-            flex-direction: column;
             justify-content: center;
             align-items: center;
         }
     }
     &__title{
         position: relative;
-        font-size: 82px;
+        font-size: 68px;
         z-index: 10;
         text-transform: uppercase;
         color: #fff;
+        font-weight: 700;
         @include mobile{
             width: 100%;
             font-size: 65px;
@@ -36,9 +39,11 @@
     &__description{
         position: relative;
         z-index: 10;
-        width: 50%;
+        text-align: justify;
+        font-weight: 300;
+        max-width: 350px;
         font-size: 24px;
-        color: #FFE7D7;
+        color: $color-primary;
         margin-bottom: 40px;
         @include small-tablet{
             width: 65%;
@@ -89,11 +94,14 @@
     }
 }
 #water3{
-    top: 90%;
+    position: absolute;
+    top: calc(100% - 1px);
     height: 200vh;
+    width: 100%;
+    background: #F19FA9;
 }
 #Gate{
     @include mobile{
-        display: none;
+        
     }
 }
