--- a/app/scss/blocks/_welcome.scss
+++ b/app/scss/blocks/_welcome.scss
@@ -43,7 +43,7 @@
         font-weight: 300;
         max-width: 350px;
         font-size: 24px;
-        color: $color-primary;
+        color: #fff;
         margin-bottom: 40px;
         @include small-tablet{
             width: 65%;
